tests/testfiles/valid_prog_fails/4_var_decl_outside.c
int c = 34;

int main() { return c; }