tests/testfiles/invalid_prog_fails/26_use_void_variable2.c
#include <stdio.h>
void print() {
    printf("Hello world");
}

int main() {
    int x = print() + 5;
    return 0;
}
